# credence

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.skin  Project.toml  README.md  SPEC.md  credence-llm-state.json  credence-spec.md  docker-compose.yml  eval_raw_data.json  eval_raw_data_3prov_100q.json  llm_eval_data.json  openclaw_eval_results.json  openclaw_eval_results_dsl.json  openclaw_eval_results_with_judge.json  program-space-agent-spec.md  pyproject.toml
.serena/: project.yml
apps/python/credence_agents/: CLAUDE.md  pyproject.toml
apps/python/credence_agents/credence_agents/: __init__.py  julia_bridge.py
apps/python/credence_agents/credence_agents/agents/: __init__.py  baselines.py  bayesian_agent.py  bayesian_selector.py  common.py  langchain_agent.py  langchain_enhanced.py
apps/python/credence_agents/credence_agents/analysis/: __init__.py  metrics.py  visualisation.py
apps/python/credence_agents/credence_agents/environment/: __init__.py  benchmark.py  categories.py  questions.py  tools.py
apps/python/credence_agents/credence_agents/inference/: __init__.py  decision.py  voi.py
apps/python/credence_agents/examples/tool_routing/: demo.py  tools.py
apps/python/credence_agents/experiments/: run_ablation.py  run_drift.py  run_full_comparison.py  run_stationary.py
apps/python/credence_agents/tests/: __init__.py  conftest.py  test_baselines.py  test_bayesian_agent.py  test_benchmark.py  test_decision.py  test_questions.py  test_tools.py
apps/python/credence_bindings/: pyproject.toml
apps/python/credence_bindings/credence/: __init__.py  _bridge.py  dsl.py  functions.py  kernel.py  measure.py  prevision.py  space.py
apps/python/credence_bindings/tests/: test_bindings.py
apps/python/credence_router/: CLAUDE.md  README.md  pyproject.toml
apps/python/credence_router/examples/: langgraph_comparison.py
apps/python/credence_router/experiments/routing_dominance/: baselines.py  dominance.py  oracle.py  routing_state.py  test_capability.py
apps/python/credence_router/scripts/: benchmark.py  feasibility_check.py  openclaw_eval.py
apps/python/credence_router/scripts/feasibility_workloads/: 01_debug_binary_search.json  02_implement_pagination.json  03_refactor_error_handling.json  04_write_tests_lru_cache.json  05_explain_modify_fibonacci.json  06_code_review_race_condition.json  07_generate_api_docs.json  08_migrate_sync_to_async.json  09_diagnose_from_logs.json  10_design_rest_api.json  11_optimize_database_queries.json  12_security_audit_jwt.json  13_implement_data_pipeline.json  14_build_cli_tool.json  15_fix_memory_leak.json  16_implement_state_machine.json  17_design_websocket_protocol.json  18_parse_and_transform_ast.json  19_debug_distributed_system.json  20_implement_caching_layer.json
apps/python/credence_router/src/credence_router/: __init__.py  analysis.py  answer.py  benchmark.py  categories.py  cli.py  config.py  group.py  questions.py  router.py  routing_domain.py  search_router.py  server.py  tool.py
apps/python/credence_router/src/credence_router/baselines/: __init__.py  langgraph_react.py  simple.py
apps/python/credence_router/src/credence_router/benchmarks/: __init__.py  llm_eval.py  search_eval.py
apps/python/credence_router/src/credence_router/compat/: __init__.py  prebuilt.py  routing_node.py  tool_adapter.py
apps/python/credence_router/src/credence_router/tool_decision/: __init__.py  approval_parsing.py  decide.py  embeddings.py  interruption.py  pipeline.py  session.py  state.py
apps/python/credence_router/src/credence_router/tools/: __init__.py  calculator.py  claude.py  coverage_prior.py  keyword_category.py  perplexity.py  simulated.py
apps/python/credence_router/src/credence_router/tools/llm/: __init__.py  provider.py
apps/python/credence_router/src/credence_router/tools/web/: __init__.py  brave.py  duckduckgo.py  perplexity.py  tavily.py
apps/python/credence_router/tests/: test_baselines.py  test_benchmark.py  test_compat.py  test_live.py  test_new_components.py  test_router.py  test_routing_domain.py  test_search_router.py  test_startup.py  test_streaming_metrics.py  test_tool_decision_approval.py  test_tool_decision_decide.py  test_tool_decision_e2e.py  test_tool_decision_embeddings.py  test_tool_decision_interruption.py  test_tool_decision_pipeline.py  test_tool_decision_session.py  test_tool_decision_state.py  test_tools.py
apps/skin/clients/python/: README.md  pyproject.toml
apps/skin/clients/python/credence_skin_client/: __init__.py
brain/: client.py  protocol.md  server.jl  test_brain.py
docs/: linear-gaussian-conjugate.md  master-plan.md  precedents.md  rss-preference-learning.md
domains/: DOMAIN_INTERFACE.md
examples/: coin.bdsl  credence_agent.bdsl  credence_engine.bdsl  grammar_programs.jl  grid_agent.bdsl  grid_world.jl  host_credence_agent.jl  host_program_agent.jl  maut_demo.bdsl  maut_demo_wire.py  metrics.jl  router.bdsl  sensor_projection.jl  tool_selection.bdsl
papers/: CLAUDE.md  NOTES.md  PAPERS-STRATEGY.md  RESULTS.md  compass_artifact_wf-559c5628-d0da-49d9-83f6-6869e18762e9_text_markdown.md  credence.aux  credence.out  credence.tex
python/credence_bindings/: pyproject.toml
python/credence_bindings/credence/: __init__.py  _bridge.py  kernel.py  measure.py
python/credence_bindings/tests/: test_bindings.py
scripts/: Project.toml  capture-invariance.jl  export_question_bank.jl  paper1-bootstrap.jl  paper1-ceiling.jl  paper1-embed-questions.py  paper1-horizon-depth.jl  paper1-horizon-gate.jl  paper1-horizon-inferred.jl  paper1-pairing-gate.jl  paper1-pareto-figure.py  paper1-pareto.py  paper1-reachable.jl
src/: BayesianDSL.jl  Credence.jl  CredenceV2_2.jl  complexity.jl  conjugate.jl  eval.jl  events.jl  family_bma.jl  gather_voi.jl  host_helpers.jl  kernels.jl  net_value.jl  ontology.jl  parse.jl  persistence.jl  prevision.jl  primitives.jl  routing.jl  saturation.jl  spaces.jl  sparse_structure.jl  stdlib.bdsl  stdlib.jl  structure_bma.jl
test/: test.jl  test_centered_moment.jl  test_coherent_injection.jl  test_compaction_survival.jl  test_complexity.jl  (+67 more)
(+656 files in other folders)
