[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "credence-router"
version = "0.3.1"
description = "INTERNAL (engine-repo-only): the credence-proxy gateway. Consumed as the credence-proxy Docker image, NOT as a pip package — it embeds credence-agents in-process, which is only sanctioned for co-released engine-repo images. See docs/decouple/master-plan.md."
readme = "README.md"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
authors = [{ name = "Guy Freeman", email = "guy@publicdatamarket.com" }]
# Demoted from a public PyPI surface: the public way to run the gateway is the
# credence-proxy GHCR image. The "Private" classifier blocks upload; the package
# stays in the workspace because the image builds from it. (Its credence-agents
# dependency is itself demoted, so a pip install would not resolve anyway.)
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "credence-agents>=0.3",
    "numpy",
]

[project.optional-dependencies]
anthropic = ["anthropic"]
perplexity = ["httpx"]
search = ["httpx", "ddgs"]
server = ["fastapi", "uvicorn", "httpx"]
langgraph = ["langgraph", "langchain-anthropic"]
compat = ["langgraph", "langchain-core>=0.2", "langchain-anthropic"]
demo = ["langchain-ollama", "langgraph", "langchain-core>=0.2"]
all = ["anthropic", "httpx", "ddgs", "fastapi", "uvicorn", "langgraph", "langchain-anthropic", "langchain-core>=0.2", "langchain-ollama"]
dev = ["pytest", "ruff"]

[project.urls]
Repository = "https://github.com/gfrmin/credence-router"

[project.scripts]
credence-router = "credence_router.cli:main"

[tool.uv.sources]
credence-agents = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/credence_router"]

[tool.ruff]
line-length = 99

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]
